data added for punishments ,offnces,institute

--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -54,7 +54,7 @@
                                     <span>The prison</span>
                                 </a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="#products" id="tmNavLink2" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-2" data-page-type="carousel">
                                     <i class="fas fa-map tm-nav-fa-icon"></i>
@@ -91,12 +91,20 @@
                                     <span>Performance Review </span>
                                 </a>
                             </li>
-
+-->
                             <li>
                                 <a href="#contact" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-8">
                                     <i class="fas fa-comments tm-nav-fa-icon"></i>
-                                    <span>Transfer Management</span>
+                                    <span>Institute Management</span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#contact" class="scrolly" data-bg-img="mainwinbg.png"
+                                   data-page="#tm-section-3">
+                                    <i class="fas fa-comments tm-nav-fa-icon"></i>
+                                    <span>Decipline Management</span>
                                 </a>
                             </li>
 
@@ -141,7 +149,7 @@
                         <!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
                     </div>
                 </section>
-
+<!--
                 <!-- Employee Management -->
 
 
@@ -183,15 +191,15 @@
 
                 <section id="tm-section-3" class="tm-section">
                     <div class="row mb-4">
-                        <header class="col-xl-12"><h2 class="tm-text-shadow">Censure Management</h2></header>
+                        <header class="col-xl-12"><h2 class="tm-text-shadow">Offence Management</h2></header>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
                             <div class="media tm-bg-transparent-black tm-border-white">
                                 <span><img src="img/censures.png"></span>
                                 <div class="media-body">
-                                    <h3>Censures</h3>
-                                    <a href="/censure/add" class="btn btn-primary">Add Censures</a>
+                                    <h3>Offence</h3>
+                                    <a href="/censure/add" class="btn btn-primary">Add Offence</a>
 
                                 </div>
                             </div>
@@ -201,8 +209,8 @@
                             <div class="media tm-bg-transparent-black tm-border-white">
                                 <span><img src="img/censures.png"></span>
                                 <div class="media-body">
-                                    <h3>Censures</h3>
-                                    <a href="/censure/add/{id}" class="btn btn-primary"> View Censures</a>
+                                    <h3>Offence</h3>
+                                    <a href="/censure/add/{id}" class="btn btn-primary"> View Offence</a>
                                 </div>
                             </div>
                         </div>
@@ -210,26 +218,26 @@
 
 
                     <div class="row mb-4">
-                        <header class="col-xl-12"><h2 class="tm-text-shadow">Commendation Management </h2></header>
+                        <header class="col-xl-12"><h2 class="tm-text-shadow">Punishment  Management </h2></header>
                     </div>
 
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
                             <div class="media tm-bg-transparent-black tm-border-white">
-                                <span><img src="img/commendation.png"></span>
+                                <span><img src="img/censures.png"></span>
                                 <div class="media-body">
-                                    <h3>Commendation</h3>
-                                    <a href="#" class="btn btn-primary">Add Commendation</a>
+                                    <h3>Punishment </h3>
+                                    <a href="#" class="btn btn-primary">Add Punishment </a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
                             <div class="media tm-bg-transparent-black tm-border-white">
-                                <span><img src="img/commendation.png"></span>
+                                <span><img src="img/censures.png"></span>
                                 <div class="media-body">
-                                    <h3>Compensation</h3>
-                                    <a href="#" class="btn btn-primary"> View Commendation</a>
+                                    <h3>Punishment</h3>
+                                    <a href="#" class="btn btn-primary"> View Punishment </a>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +348,7 @@
 
                 </section>
 
-
+-->
                 <!-- Analytics and Reporting -->
 
 
@@ -379,14 +387,14 @@
                 <section id="tm-section-8" class="tm-section tm-section-carousel">
 
                     <div class="row">
-                        <header class="col-xl-12"><h2 class="tm-text-shadow">Transfer Management</h2></header>
+                        <header class="col-xl-12"><h2 class="tm-text-shadow">Institute Management</h2></header>
 
                 <div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
                     <div class="media tm-bg-transparent-black tm-border-white">
                         <span><img src="img/transfer.png"></span>
                         <div class="media-body">
-                            <h3>Transfer Management</h3>
-                            <a href="#" class="btn btn-primary"> Add Transfer </a>
+                            <h3>Institute Management</h3>
+                            <a href="#" class="btn btn-primary"> Add Institute  </a>
                         </div>
                     </div>
                 </div>
@@ -394,8 +402,8 @@
                     <div class="media tm-bg-transparent-black tm-border-white">
                         <span><img src="img/transfer.png"></span>
                         <div class="media-body">
-                            <h3>Transfer Management</h3>
-                            <a href="#" class="btn btn-primary"> View Transfer </a>
+                            <h3>Institute  Management</h3>
+                            <a href="#" class="btn btn-primary"> View Institute  </a>
                         </div>
                     </div>
                 </div>
