--- a/src/main/resources/templates/commendation/addCommendation.html
+++ b/src/main/resources/templates/commendation/addCommendation.html
@@ -34,23 +34,24 @@
 </div >
 <!--Form Content-->
 
-  <div id="accordianId" role="tablist" aria-multiselectable="true" >
-    <div class="card" >
-      <div class="card-header" role="tab" id="section1HeaderId" >
-        <h5 class="mb-0" >
-          <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
-             aria-controls="section1ContentId" >
-            Employee Details
-          </a >
-        </h5 >
-      </div >
-      <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
-        <div class="card-body" >
-          <div data-th-replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
-        </div >
+<div class="container-fluid " >
+<div id="accordianId" role="tablist" aria-multiselectable="true" >
+  <div class="card" >
+    <div class="card-header" role="tab" id="section1HeaderId" >
+      <h5 class="mb-0" >
+        <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
+           aria-controls="section1ContentId" >
+          Employee Details
+        </a >
+      </h5 >
+    </div >
+    <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
+      <div class="card-body" >
+        <div data-th-replace="~{employee/employee-detail :: employeeDetailsFragment}" ></div >
       </div >
     </div >
   </div >
+</div >
 
   <div class="col-sm-12 flex-column " >
     <div id="form">
@@ -150,11 +151,10 @@
             </ul >
           </div >
 
-
     </form >
   </div >
 </div >
-</div>
+
 <!--footer include-->
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
