--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -82,7 +82,8 @@
                             <label class="control-label" data-th-for="${'name'}">Land :</label>
                         </div>
                         <div class="col-md-4">
-                            <input class="form-control" data-th-field="*{land}" required tabindex="4" type="text"/>
+                            <input class="form-control" data-th-field="*{land}" required tabindex="4" type="text"
+                            maxlength="10"/>
                             <span class="error"
                                   data-th-errors="*{land}" data-th-if="${#fields.hasErrors('land')}">Error Name</span>
                         </div>
