--- a/src/main/resources/templates/punishment/punishment.html
+++ b/src/main/resources/templates/punishment/punishment.html
@@ -32,11 +32,11 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-info  text-center">
+<div class="container-fluid  text-center">
     <!--Table view-->
     <div class="col">
         <div class="col" id="instituteListPresent" data-th-if="${not #lists.isEmpty(punishments)}">
-            <table class="table table-hover table-striped" id="myTable">
+            <table class="table table-hover table-striped " id="myTable">
                 <thead>
                     <tr>
                         <th> Index</th>
