drop own issue solved

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -165,7 +165,7 @@
             </div >
             <div class="col-md-8" >
               <input id="birthPlace" data-th-field="*{birthPlace}" class="form-control" tabindex="8"
-                     placeholder="Wariyapola"
+                     placeholder=""
                      required type="text" />
               <span data-th-errors="*{dateOfBirth}"
                     data-th-if="${#fields.hasErrors('dateOfBirth')}" class="error" >Error Birthday</span >
@@ -179,7 +179,7 @@
             <div class="col-md-8" >
               <input id="birthCertificateNumber" data-th-field="*{birthCertificateNumber}" class="form-control"
                      tabindex="8"
-                     placeholder="Enter number"
+
                      required type="text" />
               <span data-th-errors="*{birthCertificateNumber}"
                     data-th-if="${#fields.hasErrors('birthCertificateNumber')}" class="error" >Error Birthday</span >
