--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -69,7 +69,7 @@
             <a id="employeeView" data-th-href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm" >View</a >
             <a id="employeeEdit" data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm" ><i
                   class="fa fa-edit" ></i >&nbsp;Edit</a >
-            <a id="employeeRemove" data-th-href="${'/employee/remove/' + employee.id}"
+            <a  data-th-id="${'/employee/remove/' + employee.id}" onclick="confirmDelete(this)"
                data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
                   class="fa fa-trash" ></i >
               Delete</a >
