employee details was added

--- a/src/main/resources/templates/employeeInstitute/employeeInstitute-detail.html
+++ b/src/main/resources/templates/employeeInstitute/employeeInstitute-detail.html
@@ -26,7 +26,7 @@
                     <th >
                       <label class="form-label " > Id </label ></th >
                     <td >
-                      <p class="display_detail" data-th-text="${qualificationDetail.id}" ></p >
+                      <p class="display_detail" data-th-text="${employeeInstituteDetail.id}" ></p >
                     </td >
                   </tr >
 
@@ -34,14 +34,12 @@
                     <th >
                       <label class="form-label " > Name </label ></th >
 
-                    <td ><p class="display_detail" data-th-text="${qualificationDetail.name}" ></p >
+                    <td ><p class="display_detail" data-th-text="${employeeInstituteDetail.name}" ></p >
                     </td >
                   </tr >
                   </tbody >
                 </table >
               </div >
-
-
             </div >
           </div >
         </div >
