--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -239,7 +239,8 @@
   </div >
 
   <div id="accordianId" role="tablist" aria-multiselectable="true" >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeInstitutes)}">
+    <!--Employee Institute Details-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeInstitutes)}" >
       <div class="card-header" role="tab" id="section1HeaderId" >
         <h5 class="mb-0" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section1ContentId" aria-expanded="true"
@@ -251,14 +252,32 @@
       <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
         <div class="card-body" >
           <!--Employee Institute Details-->
-          <div class="container-fluid"
-               data-th-each="employeeInstituteDetail : ${employeeDetail.employeeInstitutes}" >
-            <div data-th-replace="~{employeeInstitute/employeeInstitute-detail :: employeeInstituteDetailsFragment}" ></div >
-          </div >
+          <table class="table table-striped table-inverse table-responsive" >
+            <thead class="thead-inverse" >
+            <tr >
+              <th >Index</th >
+              <th >Change Reason</th >
+              <th >Institute Name</th >
+              <th >Start At</th >
+              <th >End At</th >
+            </tr >
+            </thead >
+            <tbody >
+            <tr data-th-each="employeeInstituteDetail, index : ${employeeDetail.employeeInstitutes}" >
+              <td data-th-text="${index.count}" ></td >
+              <td data-th-text="${employeeInstituteDetail.instituteChangeReason.instituteChangeReason}" ></td >
+              <td data-th-text="${employeeInstituteDetail.institute.name}" ></td >
+              <td data-th-text="${{employeeInstituteDetail.startAt}}" ></td >
+              <td data-th-text="${{employeeInstituteDetail.endAt}}" ></td >
+            </tr >
+            </tbody >
+          </table >
+
         </div >
       </div >
     </div >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeLeaves)}">
+    <!--Employee Leave-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.employeeLeaves)}" >
       <div class="card-header" role="tab" id="section2HeaderId" >
         <h5 class="mb-0" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section2ContentId" aria-expanded="true"
@@ -277,7 +296,8 @@
         </div >
       </div >
     </div >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.qualifications)}">
+    <!--Qualification-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.qualifications)}" >
       <div class="card-header" role="tab" id="section3HeaderId" >
         <h5 class="mb-0" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section3ContentId" aria-expanded="true"
@@ -296,26 +316,28 @@
         </div >
       </div >
     </div >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.commendations)}">
-    <div class="card-header" role="tab" id="section4HeaderId" >
-      <h5 class="mb-0" >
-        <a data-toggle="collapse" data-parent="#accordianId" href="#section4ContentId" aria-expanded="true"
-           aria-controls="section4ContentId" >
-          Commendations
-        </a >
-      </h5 >
-    </div >
-    <div id="section4ContentId" class="collapse in" role="tabpanel" aria-labelledby="section4HeaderId" >
-      <div class="card-body" >
-        <!--Commendations-->
-        <div class="container-fluid"
-             data-th-each="commendationDetail : ${employeeDetail.commendations}" >
-          <div data-th-replace="~{commendation/commendation-detail :: commendationDetailsFragment}" ></div >
+    <!--Commendations-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.commendations)}" >
+      <div class="card-header" role="tab" id="section4HeaderId" >
+        <h5 class="mb-0" >
+          <a data-toggle="collapse" data-parent="#accordianId" href="#section4ContentId" aria-expanded="true"
+             aria-controls="section4ContentId" >
+            Commendations
+          </a >
+        </h5 >
+      </div >
+      <div id="section4ContentId" class="collapse in" role="tabpanel" aria-labelledby="section4HeaderId" >
+        <div class="card-body" >
+          <!--Commendations-->
+          <div class="container-fluid"
+               data-th-each="commendationDetail : ${employeeDetail.commendations}" >
+            <div data-th-replace="~{commendation/commendation-detail :: commendationDetailsFragment}" ></div >
+          </div >
         </div >
       </div >
     </div >
-  </div >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.censures)}">
+    <!-- Censure-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.censures)}" >
       <div class="card-header" role="tab" id="section5HeaderId" >
         <h5 class="mb-0" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section5ContentId" aria-expanded="true"
@@ -334,7 +356,8 @@
         </div >
       </div >
     </div >
-    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluations)}">
+    <!--performanceEvaluations-->
+    <div class="card" data-th-if="${not #lists.isEmpty(employeeDetail.performanceEvaluations)}" >
       <div class="card-header" role="tab" id="section6HeaderId" >
         <h5 class="mb-0" >
           <a data-toggle="collapse" data-parent="#accordianId" href="#section6ContentId" aria-expanded="true"
@@ -354,6 +377,8 @@
       </div >
     </div >
   </div >
+
+
 </div >
 
 <!--Button-->
