--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -53,7 +53,7 @@
   <div class="col-sm-12 flex-column " >
     <form data-th-action="${addStatus==true?'/censure/save' :'/censure/update'}" method="post"
           data-th-object="${censure}"
-          class="mt-3" >
+          class="mt-3" enctype="multipart/form-data" >
       <input data-th-name="${'employee.id'}" data-th-value="${employeeDetail.id}" class="form-control" type="hidden"
              readonly />
       <!--Id-->
