--- a/src/main/resources/templates/censure/censure.html
+++ b/src/main/resources/templates/censure/censure.html
@@ -48,15 +48,16 @@
     <tr data-th-each="censure, rowCount : ${censures}" scope="row" >
       <th data-th-text="${rowCount.count}" ></th >
       <th data-th-text="${censure.refNumber}" ></th >
+      <th data-th-text="${censure.employee.name}" ></th >
       <th data-th-text="${{censure.incidentDate}}" ></th >
       <th data-th-text="${censure.offence.name}" ></th >
       <th >
         <a class="btn btn-primary btn-sm" data-th-href="${'/censure/edit/' + censure.id}" ><i
               class="fa fa-edit" ></i >&nbsp;Edit</a >
         <a class="btn btn-danger btn-sm" data-th-href="${'/censure/remove/' + censure.id}"
-           data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"
-        ><i aria-hidden="true" class="fa fa-trash" ></i > Delete</a >
+           data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" ><i aria-hidden="true"
+                                                                                    class="fa fa-trash" ></i >
+          Delete</a >
 
       </th >
     </tr >
