--- a/src/main/resources/templates/employeeLeave/employeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/employeeLeave.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  >
+<html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Thymeleaf Springboot </title >
@@ -33,7 +33,7 @@
 </div >
 <div class="container-fluid  text-center" >
 
-  <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(qualifications)}" >
+  <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(employeeLeaves)}" >
     <thead class="thead-inverse" >
     <tr >
       <th >Index</th >
@@ -45,22 +45,19 @@
     </tr >
     </thead >
     <tbody >
-    <tr data-th-each="qualification, rowCount : ${qualifications}" scope="row" >
+    <tr data-th-each="employeeLeave, rowCount : ${employeeLeaves}" >
       <th data-th-text="${rowCount.count}" ></th >
-      <th data-th-text="${qualification.employee.name}" ></th >
-      <th data-th-text="${qualification.name}" ></th >
-      <th data-th-text="${{qualification.startAt}}" ></th >
-      <th data-th-text="${{qualification.endAt}}" ></th >
-      <th > <span data-th-text="${qualification.dayCount +' '+ qualification.hourCount}" ></span></th >
+      <th data-th-text="${employeeLeave.employee.name}" ></th >
+      <th data-th-text="${{employeeLeave.startAt}}" ></th >
+      <th data-th-text="${{employeeLeave.endAt}}" ></th >
+      <th ><span data-th-text="${employeeLeave.dayCount +' Day '+ employeeLeave.hourCount+' Hour'}" ></span ></th >
       <th >
-        <a class="btn btn-primary btn-sm" id="qualificationEdit"
-           data-th-href="${'/qualification/edit/' + qualification.id}" ><i
+        <a class="btn btn-primary btn-sm"
+           data-th-href="${'/qualification/edit/' + employeeLeave.id}" ><i
               class="fa fa-edit" ></i >&nbsp;Edit</a >
-        <a class="btn btn-danger btn-sm" id="qualificationRemove"
-           data-th-href="${'/qualification/remove/' + qualification.id}"
-           data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"
-        ><i
+        <a class="btn btn-danger btn-sm"
+           data-th-href="${'/qualification/remove/' + employeeLeave.id}"
+           data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" ><i
               aria-hidden="true" class="fa fa-trash" ></i >
           Delete</a >
 
@@ -70,7 +67,7 @@
   </table >
 
   <!--if empty list-->
-  <div class="row" id="qualificationNotList" data-th-if="${ #lists.isEmpty(qualifications)}" >
+  <div class="row" id="qualificationNotList" data-th-if="${ #lists.isEmpty(employeeLeaves)}" >
     <div class="alert alert-warning alert-dismissible fade show" role="alert" >
       <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
         <span aria-hidden="true" >&times;</span >
@@ -80,19 +77,6 @@
                  using add qualification button.
         </strong >
       </h3 >
-    </div >
-  </div >
-  <!--Show saved qualification-->
-  <div class="row" data-th-if="${qualificationDetail!=null}" >
-    <div class="col-sm-12" >
-      <div class="alert alert-success alert-dismissible fade show" role="alert" >
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
-          <span aria-hidden="true" >&times;</span >
-        </button >
-        <div class="container" >
-          <div data-th-replace="~{qualification/qualification-detail :: qualificationDetail}" ></div >
-        </div >
-      </div >
     </div >
   </div >
 </div >
