--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="container-fluid   ">
     <div class="row text-center ">
         <div class="col">
             <a class="btn btn-success" id="newUser" data-th-href="${'/user/add'}">
@@ -23,7 +23,7 @@
         <div class="col"></div>
     </div>
 </div>
-<div class="container-fluid bg-dark ">
+<div class="    container-fluid ">
     <div class="col-sm-12 flex-column ">
         <div class="row" id="userListTable" data-th-if="${not #lists.isEmpty(users)}">
             <div class="col-sm-12">
