--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en"  >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
   <title >Department of Prison </title >
@@ -33,7 +33,7 @@
   </div >
 </div >
 <div class="container-fluid " >
-<div class="container-fluid formBorder text-center" >
+<div class="container-fluid     text-center" >
   <div class="col" >
     <div class="col" id="employeeListPresent" data-th-if="${not #lists.isEmpty(employees)}" >
       <table class="table table-hover table-striped" id="myTable" >
