--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
@@ -7,7 +7,7 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-dark formBorder">
+<div class="    container-fluid    ">
     <div class="col-md-12 flex-column ">
         <!--Container spaces-->
         <div class="row text-center">
