--- a/src/main/resources/templates/role/addRole.html
+++ b/src/main/resources/templates/role/addRole.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="container-fluid   ">
     <div class="row text-center ">
         <div class="col">
             <a class="btn btn-primary" href="/home">
@@ -28,7 +28,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark ">
+<div class="    container-fluid ">
     <div class="col-sm-12 flex-column ">
         <form id="form" class="form-horizontal" method="POST" data-th-action="${addStatus==true?'/role/add':'/role/update'}"
               data-th-object="${role}">
