--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -7,7 +7,7 @@
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
+<div class="container-fluid   ">
     <div class="row text-center ">
         <div class="col">
             <a class="btn btn-success" href="/role/add">
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark ">
+<div class="    container-fluid ">
     <div class="offset-2 col-8 col-sm-8 col-md-8" id="roleListPresent" data-th-if="${not #lists.isEmpty(roles)}">
         <div class="table-responsive">
             <table class="table table-striped table-condensed">
