--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--Page header -->
-<div class="container-fluid bg-secondary form-Border">
+<div class="container-fluid   ">
     <div class="row text-center ">
         <div class="col">
             <a class="btn btn-primary" href="/home">
@@ -30,7 +30,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid bg-dark ">
+<div class="    container-fluid ">
     <div class="row">
         <!--Left Side-->
         <div class="form-group col-md-6 col-sm-6 text-left flex-column">
