--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -273,7 +273,7 @@
       <div id="section1ContentId" class="collapse in" role="tabpanel" aria-labelledby="section1HeaderId" >
         <div class="card-body" >
           <!--Employee Institute Details-->
-          <table class="table table-striped table-inverse" >
+          <table class="table table-striped table-inverse table-responsive" >
             <thead class="thead-inverse" >
             <tr >
               <th >Index</th >
@@ -293,6 +293,7 @@
             </tr >
             </tbody >
           </table >
+
         </div >
       </div >
     </div >
@@ -383,24 +384,10 @@
       <div id="section4ContentId" class="collapse in" role="tabpanel" aria-labelledby="section4HeaderId" >
         <div class="card-body" >
           <!--Commendations-->
-          <table class="table table-hover table-striped" >
-            <thead >
-            <tr >
-              <th > Index</th >
-              <th > Employee Name</th >
-              <th > Ref Number</th >
-              <th > Description</th >
-            </tr >
-            </thead >
-            <tbody >
-            <tr data-th-each="commendation, rowCount : ${employeeDetail.commendations}" >
-              <th data-th-text="${rowCount.count}" ></th >
-              <th data-th-text="${commendation.employee.name}" ></th >
-              <th data-th-text="${commendation.refNumber}" ></th >
-              <th data-th-utext="${commendation.description}" ></th >
-            </tr >
-            </tbody >
-          </table >
+          <div class="container-fluid"
+               data-th-each="commendationDetail : ${employeeDetail.commendations}" >
+            <div data-th-replace="~{commendation/commendation-detail :: commendationDetailsFragment}" ></div >
+          </div >
         </div >
       </div >
     </div >
