--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -100,7 +100,7 @@
 </div>
 
 <!--footer include-->
-<footer id="footer" class="page-footer"></footer>
+<div id="footer" class="page-footer"></div>
 <!--script include-->
 <script id="script"></script>
 </body>
