--- a/src/main/resources/templates/performanceEvaluation/addPerformanceEvaluation.html
+++ b/src/main/resources/templates/performanceEvaluation/addPerformanceEvaluation.html
@@ -301,7 +301,7 @@
           </div >
           <!--Public Relations end-->
         </div >
-        <div class="container"><!--second part-->
+        <div class="container" data-th-if="${confirm}"><!--second part-->
           <div class="container-fluid">
             <div class="container-fluid">
               <p class="text-center h3">II.Part filled Appraiser y</p>
