--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -3,7 +3,8 @@
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
 </head >
-<body  >
+<body >
+<link data-th-href="@{/css/combo-box-search.css}" media="all" rel="stylesheet" type="text/css" />
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 
@@ -118,7 +119,7 @@
               <label class="control-label" for="nic" >NIC No :</label >
             </div >
             <div class="col-md-8" >
-              <input data-th-field="*{nic}" class="form-control" tabindex="6" type="text"
+              <input id="nic" data-th-field="*{nic}" class="form-control" tabindex="6" type="text"
                      maxlength="12"
                      minlength="10" required />
               <span class="error" id="nicError" data-th-errors="*{nic}"
@@ -313,6 +314,33 @@
               </select >
             </div >
           </div >
+          <!--Working Place-->
+          <div class="form-row text-right" >
+            <div class="col-md-4" >
+              <label class="control-label" for="institute" >Institute :</label >
+            </div >
+            <div class="col-md-8" >
+              <select id="institute" class="form-control" data-th-field="*{institute}" tabindex="19"
+                      required >
+                <option value="" >Please select</option >
+                <option data-th-each="institute : ${institutes}"
+                        data-th-text="${institute.name}"
+                        data-th-value="${institute.id}" ></option >
+              </select >
+            </div >
+          </div >
+          <!--supervisor-->
+          <div class="form-row text-right" >
+            <div class="col-md-4" >
+              <label class="control-label" for="supervisor" >Employee Supervisor :</label >
+            </div >
+            <div class="col-md-8" >
+              <select id="supervisor" data-th-field="*{supervisor}" class="form-control" tabindex="19"
+                      required >
+                <option value="" >Please select</option >
+              </select >
+            </div >
+          </div >
           <!--Image-->
           <div class="form-row text-right" >
             <div class="form-row " >
@@ -324,11 +352,11 @@
               <div class="col-md-3" ></div >
               <div class="col-md-3 ml-5" >
                 <!--photo details-->
-              <!--  <img class="img-fluid ml-5" data-th-if="${addStatus==false && file!=null}" data-th-src="${file.url}"
+                <img class="img-fluid ml-5" data-th-if="${addStatus==false && file!=null}" data-th-src="${file.url}"
                      id="image" alt=""
                      style="height: 100px; width: 100%;" >
                 <img class="img-fluid ml-5" data-th-if="${addStatus==true}" src="" id="image" alt=""
-                     style="height: 100px; width: 100%" >-->
+                     style="height: 100px; width: 100%" >
               </div >
             </div >
           </div >
@@ -380,50 +408,70 @@
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
-
+<input type="hidden" id="supervisorFindUrl" data-th-value="${supervisorFindUrl}" >
+<script data-th-src="@{/js/combo-box-search.js}" ></script >
 <script >
-  $(document).ready(function () {
-    imageSrcAttributeCheck();
+    $(document).ready(function () {
+        imageSrcAttributeCheck();
 
-    $('[type="date"]').prop('max', function () {
-      return new Date().toJSON().split('T')[0];
+        $('[type="date"]').prop('max', function () {
+            return new Date().toJSON().split('T')[0];
+        });
+
     });
 
-  });
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            let reader = new FileReader();
 
-  function readURL(input) {
-    if (input.files && input.files[0]) {
-      let reader = new FileReader();
+            reader.onload = function (e) {
+                $('#image').attr('src', e.target.result);
+            }
 
-      reader.onload = function (e) {
-        $('#image').attr('src', e.target.result);
-      }
+            if (input.files[0].size < 10485760) {
+                reader.readAsDataURL(input.files[0]);
+            } else {
+                swal({
+                    title: "Select file size was too large select less than 10MB file",
+                    icon: "warning",
+                });
+            }
+        }
+    }
 
-      if (input.files[0].size < 10485760) {
-        reader.readAsDataURL(input.files[0]);
-      } else {
-        swal({
-          title: "Select file size was too large select less than 10MB file",
-          icon: "warning",
+    //display selected image ->
+    $("#imgUpload").change(function () {
+        $("#image").toggle('show');
+        readURL(this);
+
+    });
+
+    //image is not -> showing area hide
+    function imageSrcAttributeCheck() {
+        let attribute = $("#image").attr("src");
+        if (attribute === '') {
+            $("#image").toggle('hide');
+        }
+    }
+
+    $("#institute").change(function () {
+        $("#supervisor").find('option').remove();
+        $.ajax({
+            type: 'GET',
+            url: $("#supervisorFindUrl").val() + $(this).val(),
+            success: function (resp) {
+                $.each(resp, function () {
+                    $("#supervisor").append(`<option value="${this.id}">${this.name}</option>`);
+                });
+                $("#supervisor").select2({
+                    data: $(this).val()
+                }).addClass('form-control');
+            },
+            error: function (err) {
+                console.log(err);
+            }
         });
-      }
-    }
-  }
-
-  //display selected image
-  $("#imgUpload").change(function () {
-    $("#image").toggle('show');
-    readURL(this);
-
-  });
-  //image is not -> showing area hide
-  function imageSrcAttributeCheck() {
-    let attribute = $("#image").attr("src");
-    if (attribute === '') {
-      $("#image").toggle('hide');
-    }
-  }
-
+    });
 </script >
 </body >
 </html >
